check if key exists before accessing its value
For some reason ansible 2.7 has become more strict than ansible 2.6.x
and accessing `iface.status` if it's not defined will now fail. So
we now check first if the key is defined before accessing its value.

--- a/network-orchestrator/roles/cumulus/templates/interfaces.j2
+++ b/network-orchestrator/roles/cumulus/templates/interfaces.j2
@@ -177,7 +177,7 @@ iface {{ iface.name }}
 {% for vlan in configured_vlans if iface.vid == vlan.vid | string %}
 {% set _dummy = iface.update({'anycast_ip':vlan.anycast_ip,'status':vlan.status,'prefix_vrf':vlan.vrf}) %}
 {% endfor %}
-{% if device_role == 'leafs' and  iface.status == 'Active' %}
+{% if device_role == 'leafs' and iface.status is defined and iface.status == 'Active' %}
 auto {{ iface.name }}
 iface {{ iface.name }}
 {% if iface.address != None %}
